# ai-document-extractor

./: .gitignore  FIXES_APPLIED.md  HOW_TO_RUN.md  QUICKSTART.md  README.md  README_SAMPLES.md  RUN_NOW.md  pyproject.toml  run.py  sample_application.txt  sample_document.txt  sample_invoice.txt  sample_resume.txt
src/document_extractor/: __init__.py  __main__.py  extractor.py  extractor_regex.py  form.py  main.py  parser.py  web_automation.py
